mathml/presentation/mo-stretch.html and mroot-pref-width.html tests fail on Mac https://bugs.webkit.org/show_bug.cgi?id=86786
Reviewed by Darin Adler.

Source/WebCore:

The fix to https://bugs.webkit.org/show_bug.cgi?id=84167 changed inline-table baselines,
including for <mtable>. We therefore have to correct <mtable>'s vertical-align CSS
property.

Tested by existing tests mo-stretch.html, row-alignment.xhtml, and tables.xhtml.

* css/mathml.css:
(mtable):

LayoutTests:

* platform/mac/Skipped:
* platform/mac/mathml/presentation/mo-stretch-expected.png:
* platform/mac/mathml/presentation/mo-stretch-expected.txt:
* platform/mac/mathml/presentation/row-alignment-expected.png:
* platform/mac/mathml/presentation/row-alignment-expected.txt:
* platform/mac/mathml/presentation/tables-expected.png:
* platform/mac/mathml/presentation/tables-expected.txt:


Canonical link: https://commits.webkit.org/105455@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118713 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebCore/css/mathml.css
+++ b/Source/WebCore/css/mathml.css
@@ -170,7 +170,7 @@ mroot > * + mrow, mroot > * + mfenced { /* FIXME: eliminate */
 mtable {
     display: inline-table;
     text-align: center;
-    vertical-align: -40%;
+    vertical-align: middle;
 }
 
 mtr {
